salesforce-sdd-integration/force-app/main/default/objects/OpportunityQuoteSetting__mdt/OpportunityQuoteSetting__mdt.object-meta.xml
<CustomObject>
    <description>Parámetros de negocio del Cotizador de Oportunidades, modificables sin desplegar código.</description>
    <label>Configuración del Cotizador</label>
    <pluralLabel>Configuraciones del Cotizador</pluralLabel>
</CustomObject>