salesforce-sdd-integration/force-app/main/default/objects/OpportunityQuoteSetting__mdt/fields/CalloutTimeoutMs__c.field-meta.xml
<CustomField>
    <fullName>CalloutTimeoutMs__c</fullName>
    <description>Tiempo máximo de espera al proveedor de tipo de cambio, en milisegundos (máximo 120000).</description>
    <label>Timeout del proveedor (ms)</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>