salesforce-sdd-integration/force-app/main/default/objects/OpportunityQuoteSetting__mdt/fields/MaxRequestsPerCall__c.field-meta.xml
<CustomField>
    <fullName>MaxRequestsPerCall__c</fullName>
    <description>Cantidad máxima de pedidos aceptados en una llamada (FR-004).</description>
    <label>Máximo de pedidos por llamada</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>