salesforce-sdd-integration/force-app/main/default/objects/OpportunityQuoteSetting__mdt/fields/NamedCredentialName__c.field-meta.xml
<CustomField>
    <fullName>NamedCredentialName__c</fullName>
    <description>Nombre de la Named Credential usada para el callout al proveedor de tipo de cambio.</description>
    <label>Named Credential del proveedor</label>
    <type>Text</type>
    <length>80</length>
</CustomField>